# $Id$

2008-12-18	Konstantin V. Arkhipov

	* core/Cache/AggregateCache.class.php: restore true randomness upon
	exit from guessLabel().

2008-12-18	Vladlen Y. Koshelev

	* core/Form/RegulatedForm.class.php: ruleExists() added.

2008-12-17	Vladlen Y. Koshelev

	* main/OQL/OqlQuery.class.php: bindNext() wrong index fix.

2008-12-16	Vladlen Y. Koshelev

	* main/Flow/DecoratorController.class.php: controller's decorator added,
	which may be commonly used for request filters.

2008-12-15	Konstantin V. Arkhipov

	* main/OQL/OqlQuery.class.php: bindNext() implemented.

2008-12-15	Evgeniy N. Sokolov

	* core/Form/Filters/: WordSplitterFilter added.

2008-12-15	Vladlen Y. Koshelev

	* main/base/AbstractProtoClass.class.php, test/misc/DAOTest.class.php:
	lazy property import fixed, related test added. 

	* meta/types/ObjectType.class.php: check if lazy property is enumeration
	using meta information (property's class might not be generated yet to check
	its type by ReflectionClass).

2008-12-05	Ivan Y. Khvostishkov

	* core/Base/Assert.class.php: isNotEmpty() added.

2008-12-01	Denis M. Gabaidulin

	* main/Utils/Mobile/MobileRequestDetektor.class.php: mobile request
	detektor added.

2008-11-23	Konstantin V. Arkhipov

	* main/DAOs/Workers/: key's generation extracted to makeIdKey() and
	makeQueryKey(); full support for per-class watermarks, finally;
	obscure uncaching bug fixed, spooted by giv.

2008-11-21	Vladlen Y. Koshelev

	* main/UnifiedContainer/ManyToManyLinkedWorker.class.php: fixed duplicate
	join error occured when custom criteria has joiner on container's helper
	table.

2008-11-19	Vladlen Y. Koshelev

	* main/DAOs/ProtoDAO.class.php: fixed wrong cid-field table when lazy
	fetching collection.

2008-10-20	Ivan Y. Khvostishkov

	* core/Base/IntervalUnit.class.php: compareTo() implemented.

2008-10-14	Ivan Y. Khvostishkov

	* main/DAOs/Workers/BaseDaoWorker.class.php: uncacheByQuery()'s
	visibility changed to public.

2008-10-10	Vladlen Y. Koshelev
