@@ -51,6 +51,7 @@
 			$this->logic = Expression::andBlock();
 			$this->order = new OrderChain();
 			$this->strategy = FetchStrategy::join();
+			$this->projection = Projection::chain();
 		}
 		
 		public function __clone()
@@ -207,7 +208,20 @@
 		**/
 		public function setProjection(ObjectProjection $chain)
 		{
-			$this->projection = $chain;
+			if ($chain instanceof ProjectionChain)
+				$this->projection = $chain;
+			else
+				$this->projection = Projection::chain()->add($chain);
+			
+			return $this;
+		}
+		
+		/**
+		 * @return Criteria
+		**/
+		public function addProjection(ObjectProjection $projection)
+		{
+			$this->projection->add($projection);
 			
 			return $this;
 		}
@@ -225,7 +239,7 @@
 		**/
 		public function dropProjection()
 		{
-			$this->projection = null;
+			$this->projection = Projection::chain();
 			
 			return $this;
 		}
@@ -405,7 +419,7 @@
 		{
 			Assert::isNotNull($this->dao, 'DAO not set');
 			
-			if ($this->projection) {
+			if (!$this->projection->isEmpty()) {
 				$query =
 					$this->getProjection()->process(
 						$this,
@@ -444,7 +458,7 @@
 			}
 			
 			if (
-				!$this->projection
+				$this->projection->isEmpty()
 				&& (
 					$this->strategy->getId() <> FetchStrategy::CASCADE
 				)
